{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 68,
  "lineage": "619547cf-ec41-ee1f-6bb2-7478e87751ea",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:security-group/sg-09b476f6fe4912c09",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-09b476f6fe4912c09",
            "ingress": [],
            "name": "microservicesProject-cluster-2025061705023304770000000d",
            "name_prefix": "microservicesProject-cluster-",
            "owner_id": "667183278587",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "amazon-prime-cluster",
              "Name": "microservicesProject-cluster"
            },
            "tags_all": {
              "Example": "amazon-prime-cluster",
              "Name": "microservicesProject-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:security-group/sg-09b1c6cbecef25a81",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-09b1c6cbecef25a81",
            "ingress": [],
            "name": "microservicesProject-node-2025061705023220960000000c",
            "name_prefix": "microservicesProject-node-",
            "owner_id": "667183278587",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "amazon-prime-cluster",
              "Name": "microservicesProject-node",
              "kubernetes.io/cluster/microservicesProject": "owned"
            },
            "tags_all": {
              "Example": "amazon-prime-cluster",
              "Name": "microservicesProject-node",
              "kubernetes.io/cluster/microservicesProject": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2196762514",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09b476f6fe4912c09",
            "security_group_rule_id": "sgr-01e9b8799416d07f9",
            "self": false,
            "source_security_group_id": "sg-09b1c6cbecef25a81",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2886258631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09b1c6cbecef25a81",
            "security_group_rule_id": "sgr-05ba1cfa04a469101",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1280673096",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b1c6cbecef25a81",
            "security_group_rule_id": "sgr-02f30cdd3450e8445",
            "self": false,
            "source_security_group_id": "sg-09b476f6fe4912c09",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2755116442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b1c6cbecef25a81",
            "security_group_rule_id": "sgr-0e6f465dc2947c5c7",
            "self": false,
            "source_security_group_id": "sg-09b476f6fe4912c09",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1836440076",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b1c6cbecef25a81",
            "security_group_rule_id": "sgr-0e60b5b592078bdeb",
            "self": false,
            "source_security_group_id": "sg-09b476f6fe4912c09",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2116675117",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b1c6cbecef25a81",
            "security_group_rule_id": "sgr-0e5c80223c65a9ed6",
            "self": false,
            "source_security_group_id": "sg-09b476f6fe4912c09",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-445175270",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b1c6cbecef25a81",
            "security_group_rule_id": "sgr-0ed09e2e31995da53",
            "self": false,
            "source_security_group_id": "sg-09b476f6fe4912c09",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2220727669",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b1c6cbecef25a81",
            "security_group_rule_id": "sgr-01135457b63ca9a7b",
            "self": false,
            "source_security_group_id": "sg-09b476f6fe4912c09",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-401569922",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b1c6cbecef25a81",
            "security_group_rule_id": "sgr-006315492fb31f2e0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3856965828",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b1c6cbecef25a81",
            "security_group_rule_id": "sgr-05ebedf9bc99a491f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1102775083",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09b1c6cbecef25a81",
            "security_group_rule_id": "sgr-05df03e94856f9fc8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:network-acl/acl-0fb6468c81b3024cb",
            "default_network_acl_id": "acl-0fb6468c81b3024cb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fb6468c81b3024cb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "667183278587",
            "subnet_ids": [
              "subnet-06835d317fe789465",
              "subnet-070e8bdbb8c4fbb4f",
              "subnet-07e08d64964b285b7",
              "subnet-092a799be938cfcc7",
              "subnet-0de1a00a443332da6",
              "subnet-0dea5b6192d249312"
            ],
            "tags": {
              "Name": "microservicesProject-default"
            },
            "tags_all": {
              "Name": "microservicesProject-default"
            },
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:route-table/rtb-09f80eda217446491",
            "default_route_table_id": "rtb-09f80eda217446491",
            "id": "rtb-09f80eda217446491",
            "owner_id": "667183278587",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "microservicesProject-default"
            },
            "tags_all": {
              "Name": "microservicesProject-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:security-group/sg-005ab4d5cb103a931",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-005ab4d5cb103a931",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "667183278587",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "microservicesProject-default"
            },
            "tags_all": {
              "Name": "microservicesProject-default"
            },
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004fa9d168393fe32",
            "arn": "arn:aws:ec2:us-east-1:667183278587:elastic-ip/eipalloc-004fa9d168393fe32",
            "domain": "vpc",
            "id": "eipalloc-004fa9d168393fe32",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-206-53-95.compute-1.amazonaws.com",
            "public_ip": "52.206.53.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "microservicesProject-us-east-1a"
            },
            "tags_all": {
              "Name": "microservicesProject-us-east-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06cc49ff38c3b34ab",
            "arn": "arn:aws:ec2:us-east-1:667183278587:elastic-ip/eipalloc-06cc49ff38c3b34ab",
            "domain": "vpc",
            "id": "eipalloc-06cc49ff38c3b34ab",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-7-251-77.compute-1.amazonaws.com",
            "public_ip": "52.7.251.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "microservicesProject-us-east-1b"
            },
            "tags_all": {
              "Name": "microservicesProject-us-east-1b"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:internet-gateway/igw-0cb813345664ef0a0",
            "id": "igw-0cb813345664ef0a0",
            "owner_id": "667183278587",
            "tags": {
              "Name": "microservicesProject"
            },
            "tags_all": {
              "Name": "microservicesProject"
            },
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004fa9d168393fe32",
            "association_id": "eipassoc-0093f00b4ebc8e1c1",
            "connectivity_type": "public",
            "id": "nat-085dc8fd7a6834aaf",
            "network_interface_id": "eni-0a524e1d950032ca4",
            "private_ip": "10.0.77.39",
            "public_ip": "52.206.53.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-092a799be938cfcc7",
            "tags": {
              "Name": "microservicesProject-us-east-1a"
            },
            "tags_all": {
              "Name": "microservicesProject-us-east-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06cc49ff38c3b34ab",
            "association_id": "eipassoc-075f8242c39152d3e",
            "connectivity_type": "public",
            "id": "nat-0affa24d9a7054d3b",
            "network_interface_id": "eni-0e8d70e0789bb1768",
            "private_ip": "10.0.124.235",
            "public_ip": "52.7.251.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e08d64964b285b7",
            "tags": {
              "Name": "microservicesProject-us-east-1b"
            },
            "tags_all": {
              "Name": "microservicesProject-us-east-1b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f8ee712330e4672a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-085dc8fd7a6834aaf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8ee712330e4672a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08d2a09a85bd0f92c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0affa24d9a7054d3b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d2a09a85bd0f92c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cb813345664ef0a0",
            "id": "r-rtb-0097ed0b4b841ac051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0097ed0b4b841ac05",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:route-table/rtb-0ed3334b2916f6856",
            "id": "rtb-0ed3334b2916f6856",
            "owner_id": "667183278587",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "microservicesProject-intra"
            },
            "tags_all": {
              "Name": "microservicesProject-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:route-table/rtb-0f8ee712330e4672a",
            "id": "rtb-0f8ee712330e4672a",
            "owner_id": "667183278587",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "microservicesProject-private-us-east-1a"
            },
            "tags_all": {
              "Name": "microservicesProject-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:route-table/rtb-08d2a09a85bd0f92c",
            "id": "rtb-08d2a09a85bd0f92c",
            "owner_id": "667183278587",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "microservicesProject-private-us-east-1b"
            },
            "tags_all": {
              "Name": "microservicesProject-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:route-table/rtb-0097ed0b4b841ac05",
            "id": "rtb-0097ed0b4b841ac05",
            "owner_id": "667183278587",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "microservicesProject-public"
            },
            "tags_all": {
              "Name": "microservicesProject-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0753a1d73ea8caea6",
            "route_table_id": "rtb-0ed3334b2916f6856",
            "subnet_id": "subnet-0dea5b6192d249312"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b3b8cb479a96acd",
            "route_table_id": "rtb-0ed3334b2916f6856",
            "subnet_id": "subnet-0de1a00a443332da6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c63afa67cff1a323",
            "route_table_id": "rtb-0f8ee712330e4672a",
            "subnet_id": "subnet-06835d317fe789465"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087c8a49da5ab0e94",
            "route_table_id": "rtb-08d2a09a85bd0f92c",
            "subnet_id": "subnet-070e8bdbb8c4fbb4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04543eeec9bd45842",
            "route_table_id": "rtb-0097ed0b4b841ac05",
            "subnet_id": "subnet-092a799be938cfcc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b9b8f2769fe6e1b",
            "route_table_id": "rtb-0097ed0b4b841ac05",
            "subnet_id": "subnet-07e08d64964b285b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:subnet/subnet-0dea5b6192d249312",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dea5b6192d249312",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667183278587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "microservicesProject-intra-us-east-1a"
            },
            "tags_all": {
              "Name": "microservicesProject-intra-us-east-1a"
            },
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:subnet/subnet-0de1a00a443332da6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de1a00a443332da6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667183278587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "microservicesProject-intra-us-east-1b"
            },
            "tags_all": {
              "Name": "microservicesProject-intra-us-east-1b"
            },
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:subnet/subnet-06835d317fe789465",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06835d317fe789465",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667183278587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "microservicesProject-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "microservicesProject-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:subnet/subnet-070e8bdbb8c4fbb4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070e8bdbb8c4fbb4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667183278587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "microservicesProject-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "microservicesProject-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:subnet/subnet-092a799be938cfcc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092a799be938cfcc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667183278587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "microservicesProject-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "microservicesProject-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:subnet/subnet-07e08d64964b285b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e08d64964b285b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667183278587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "microservicesProject-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "microservicesProject-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c0dba0c7e2d73ffd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667183278587:vpc/vpc-0c0dba0c7e2d73ffd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb6468c81b3024cb",
            "default_route_table_id": "rtb-09f80eda217446491",
            "default_security_group_id": "sg-005ab4d5cb103a931",
            "dhcp_options_id": "dopt-0e8823187404f843f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0dba0c7e2d73ffd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f80eda217446491",
            "owner_id": "667183278587",
            "tags": {
              "Name": "microservicesProject"
            },
            "tags_all": {
              "Name": "microservicesProject"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}